CNSDEVCOLECT/force-app/main/default/objects/TaskInformation__c/TaskInformation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Información para generar tareas</description>
    <label>TaskInformation</label>
</CustomObject>