CNSDEVCOLECT/force-app/main/default/objects/TaskInformation__c/fields/Filtro__c.field-meta.xml
<CustomField>
    <fullName>Filtro__c</fullName>
    <label>Filtro</label>
    <length>150</length>
    <type>Text</type>
</CustomField>