CNSDEVCOLECT/force-app/main/default/objects/TaskInformation__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>