CNSDEVCOLECT/force-app/main/default/objects/TaskInformation__c/fields/Tipo_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Notificacion__c</fullName>
    <description>Se define el tipo de notificación</description>
    <label>Tipo Notificación</label>
    <length>20</length>
    <type>Text</type>
</CustomField>