CNSDEVCOLECT/force-app/main/default/objects/TaskInformation__c/fields/ValorFiltro__c.field-meta.xml
<CustomField>
    <fullName>ValorFiltro__c</fullName>
    <label>ValorFiltro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>