CNSDEVCOLECT/force-app/main/default/objects/TaskInformation__c/fields/Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Vencimiento__c</fullName>
    <label>Vencimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>