CNSDEVCOLECT/force-app/main/default/objects/TaskInformation__c/listViews/ViewTask.listView-meta.xml
<ListView>
    <fullName>ViewTask</fullName>
    <columns>NAME</columns>
    <columns>Asunto__c</columns>
    <columns>Estado__c</columns>
    <columns>Origen__c</columns>
    <columns>Vencimiento__c</columns>
    <columns>Filtro__c</columns>
    <columns>ValorFiltro__c</columns>
    <columns>Tipo_Notificacion__c</columns>
    <filterScope>Everything</filterScope>
    <label>ViewTask</label>
</ListView>